--- a/vue/.gitignore
+++ b/vue/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
+.com.google.Chrome.*/
 
 # Editor directories and files
 .idea
