--- a/conf/default.conf
+++ b/conf/default.conf
@@ -14,7 +14,10 @@ server
         location / {
             root /www/default;
             index index.php index.htm;
-            add_header Access-Control-Allow-Origin *;  
+            add_header Access-Control-Allow-Origin http://localhost:8080;
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'POST, GET, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             rewrite ^(.+)$ /index.php/$1;
             try_files    $uri $uri/  /index.php/$uri&$args;
         }
