--- a/reactAsync/package.json
+++ b/reactAsync/package.json
@@ -4,8 +4,10 @@
   "description": "react async",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --config build/webpack.dev.conf.js",
-    "test": "dev"
+    "dev": "node build/dev-server.js",
+    "dev-build": "webpack --config build/webpack.dev.conf.js",
+    "build": "webpack --config build/webpack.prod.conf.js",
+    "start": "node build/prod-server.js"
   },
   "keywords": [
     "react",
@@ -30,7 +32,11 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-runtime": "^6.26.0",
+    "bundle-loader": "^0.5.5",
+    "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.8",
+    "ejs": "^2.5.7",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
@@ -49,8 +55,11 @@
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-prop-types": "^0.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
